[EV-3369] Update management and managed cluster title.

--- a/calico-enterprise/multicluster/helm/create-a-managed-cluster-helm.mdx
+++ b/calico-enterprise/multicluster/helm/create-a-managed-cluster-helm.mdx
@@ -2,13 +2,13 @@
 description: Install Calico Enterprise managed cluster using Helm application package manager.
 ---
 
-# Helm
+# Create a Calico Enterprise managed cluster with Helm
 
 import CodeBlock from '@theme/CodeBlock';
 
 ## Big picture
 
-Install {{prodname}} on a Kubernetes cluster using Helm 3.
+Create a {{prodname}} managed cluster that you can control from your management cluster using Helm 3.
 
 ## Value
 
@@ -71,8 +71,6 @@ If you are installing on a cluster installed by EKS, GKE, AKS or Mirantis Kubern
   ```
 
 ### Install {{prodname}}
-
-Managed clusters are used if you are implementing the Multi-cluster management feature.
 
 To install a {{prodname}} [managed](../create-a-managed-cluster#value) cluster with Helm:
 
