--- a/calico-enterprise/multicluster/helm/create-a-management-cluster-helm.mdx
+++ b/calico-enterprise/multicluster/helm/create-a-management-cluster-helm.mdx
@@ -2,13 +2,13 @@
 description: Install Calico Enterprise management cluster using Helm application package manager.
 ---
 
-# Helm
+# Create a Calico Enterprise management cluster with Helm
 
 import CodeBlock from '@theme/CodeBlock';
 
 ## Big picture
 
-Install {{prodname}} on a Kubernetes cluster using Helm 3.
+Create a {{prodname}} management cluster to manage multiple clusters from a single management plane using Helm 3.
 
 ## Value
 
@@ -71,8 +71,6 @@ If you are installing on a cluster installed by EKS, GKE, AKS or Mirantis Kubern
   ```
 
 ### Install {{prodname}}
-
-Management clusters are used if you are implementing the Multi-cluster management feature.
 
 To install a {{prodname}} [management](../create-a-management-cluster#value) cluster with Helm:
 
