Removes bad link

--- a/calico-cloud_versioned_docs/version-18/multicluster/overview.mdx
+++ b/calico-cloud_versioned_docs/version-18/multicluster/overview.mdx
@@ -44,7 +44,7 @@ This feature does not _federate network policies_; policies from a remote cluste
 
 Federated services works with federated endpoint identity, providing cross-cluster service discovery for a local cluster. If you have an existing service discovery mechanism, this feature is optional.
 
-Federated services use the Tigera Federated Services Controller to federate all [Kubernetes endpoints](https://v1-21.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.21/#endpoints-v1-core) (workload and host endpoints) across all of the clusters. The Federated Services Controller accesses service and endpoints data in the remote clusters directly through the Kubernetes API.
+Federated services use the Tigera Federated Services Controller to federate all Kubernetes endpoints (workload and host endpoints) across all of the clusters. The Federated Services Controller accesses service and endpoints data in the remote clusters directly through the Kubernetes API.
 
 ## Next steps
 
